IR/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function_list
Rule 2     function_list -> function_list function
Rule 3     function_list -> function
Rule 4     function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
Rule 5     function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
Rule 6     function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
Rule 7     function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
Rule 8     param_list -> param_list COMMA parameter
Rule 9     param_list -> parameter
Rule 10    parameter -> ID AS type
Rule 11    type -> INT
Rule 12    type -> STR
Rule 13    type -> MSTR
Rule 14    type -> BOOL
Rule 15    type -> VECTOR
Rule 16    type -> NULL
Rule 17    stmt_list -> stmt_list statement
Rule 18    stmt_list -> statement
Rule 19    stmt_list -> empty
Rule 20    statement -> var_declaration
Rule 21    statement -> assignment
Rule 22    statement -> function_call_stmt
Rule 23    statement -> return_stmt
Rule 24    statement -> if_stmt
Rule 25    statement -> for_stmt
Rule 26    statement -> while_stmt
Rule 27    statement -> do_while_stmt
Rule 28    statement -> block_stmt
Rule 29    statement -> function
Rule 30    var_declaration -> ID DBL_COLON type SEMI_COLON
Rule 31    var_declaration -> ID DBL_COLON type EQ expression SEMI_COLON
Rule 32    assignment -> ID EQ expression SEMI_COLON
Rule 33    assignment -> array_access EQ expression SEMI_COLON
Rule 34    array_access -> ID LSQUAREBR expression RSQUAREBR
Rule 35    function_call_stmt -> function_call SEMI_COLON
Rule 36    function_call -> ID LPAREN arg_list RPAREN
Rule 37    function_call -> ID LPAREN RPAREN
Rule 38    function_call -> PRINT LPAREN arg_list RPAREN
Rule 39    function_call -> PRINT LPAREN RPAREN
Rule 40    function_call -> LEN LPAREN expression RPAREN
Rule 41    arg_list -> arg_list COMMA expression
Rule 42    arg_list -> expression
Rule 43    return_stmt -> RETURN expression SEMI_COLON
Rule 44    return_stmt -> RETURN SEMI_COLON
Rule 45    if_stmt -> IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
Rule 46    if_stmt -> IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement ELSE statement
Rule 47    for_stmt -> FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
Rule 48    while_stmt -> WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
Rule 49    do_while_stmt -> DO statement WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR
Rule 50    block_stmt -> BEGIN stmt_list END
Rule 51    expression -> expression PLUS expression
Rule 52    expression -> expression MINUS expression
Rule 53    expression -> expression MULTIPLY expression
Rule 54    expression -> expression DIVIDE expression
Rule 55    expression -> expression EQEQ expression
Rule 56    expression -> expression NEQ expression
Rule 57    expression -> expression LESS_THAN expression
Rule 58    expression -> expression GREATER_THAN expression
Rule 59    expression -> expression LTEQ expression
Rule 60    expression -> expression GTEQ expression
Rule 61    expression -> expression AND expression
Rule 62    expression -> expression OR expression
Rule 63    expression -> NOT expression
Rule 64    expression -> MINUS expression
Rule 65    expression -> PLUS expression
Rule 66    expression -> expression QMARK expression COLON expression
Rule 67    expression -> LPAREN expression RPAREN
Rule 68    expression -> LSQUAREBR arg_list RSQUAREBR
Rule 69    expression -> LSQUAREBR RSQUAREBR
Rule 70    expression -> NUMBER
Rule 71    expression -> STRING
Rule 72    expression -> MSTRING
Rule 73    expression -> TRUE
Rule 74    expression -> FALSE
Rule 75    expression -> ID
Rule 76    expression -> array_access
Rule 77    expression -> function_call
Rule 78    empty -> <empty>

Terminals, with rules where they appear

AND                  : 61
ARROW                : 6 7
AS                   : 10
BEGIN                : 47 50
BOOL                 : 14
COLON                : 66
COMMA                : 8 41
DBL_COLON            : 30 31
DIVIDE               : 54
DO                   : 49
ELSE                 : 46
END                  : 47 50
EQ                   : 31 32 33 47
EQEQ                 : 55
FALSE                : 74
FOR                  : 47
FUNK                 : 4 5 6 7
GREATER_THAN         : 4 5 6 7 58
GTEQ                 : 60
ID                   : 4 5 6 7 10 30 31 32 34 36 37 47 75
IF                   : 45 46
INT                  : 11
LCURLYEBR            : 4 5
LEN                  : 40
LESS_THAN            : 4 5 6 7 57
LPAREN               : 4 5 6 7 36 37 38 39 40 47 67
LSQUAREBR            : 34 45 45 46 46 48 48 49 49 68 69
LTEQ                 : 59
MINUS                : 52 64
MSTR                 : 13
MSTRING              : 72
MULTIPLY             : 53
NEQ                  : 56
NOT                  : 63
NULL                 : 16
NUMBER               : 70
OR                   : 62
PLUS                 : 51 65
PRINT                : 38 39
QMARK                : 66
RCURLYEBR            : 4 5
RETURN               : 6 7 43 44
RPAREN               : 4 5 6 7 36 37 38 39 40 47 67
RSQUAREBR            : 34 45 45 46 46 48 48 49 49 68 69
SEMI_COLON           : 6 7 30 31 32 33 35 43 44
STR                  : 12
STRING               : 71
TO                   : 47
TRUE                 : 73
VECTOR               : 15
WHILE                : 48 49
error                : 

Nonterminals, with rules where they appear

arg_list             : 36 38 41 68
array_access         : 33 76
assignment           : 21
block_stmt           : 28
do_while_stmt        : 27
empty                : 19
expression           : 6 7 31 32 33 34 40 41 42 43 45 46 47 47 48 49 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65 66 66 66 67
for_stmt             : 25
function             : 2 3 29
function_call        : 35 77
function_call_stmt   : 22
function_list        : 1 2
if_stmt              : 24
param_list           : 4 6 8
parameter            : 8 9
program              : 0
return_stmt          : 23
statement            : 17 18 45 46 46 48 49
stmt_list            : 4 5 17 47 50
type                 : 4 5 6 7 10 30 31
var_declaration      : 20
while_stmt           : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_list
    (2) function_list -> . function_list function
    (3) function_list -> . function
    (4) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON

    FUNK            shift and go to state 4

    program                        shift and go to state 1
    function_list                  shift and go to state 2
    function                       shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> function_list .
    (2) function_list -> function_list . function
    (4) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON

    $end            reduce using rule 1 (program -> function_list .)
    FUNK            shift and go to state 4

    function                       shift and go to state 5

state 3

    (3) function_list -> function .

    FUNK            reduce using rule 3 (function_list -> function .)
    $end            reduce using rule 3 (function_list -> function .)


state 4

    (4) function -> FUNK . ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> FUNK . ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK . ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> FUNK . ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON

    ID              shift and go to state 6


state 5

    (2) function_list -> function_list function .

    FUNK            reduce using rule 2 (function_list -> function_list function .)
    $end            reduce using rule 2 (function_list -> function_list function .)


state 6

    (4) function -> FUNK ID . LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> FUNK ID . LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK ID . LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> FUNK ID . LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON

    LPAREN          shift and go to state 7


state 7

    (4) function -> FUNK ID LPAREN . param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> FUNK ID LPAREN . RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK ID LPAREN . param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> FUNK ID LPAREN . RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (8) param_list -> . param_list COMMA parameter
    (9) param_list -> . parameter
    (10) parameter -> . ID AS type

    RPAREN          shift and go to state 10
    ID              shift and go to state 8

    param_list                     shift and go to state 9
    parameter                      shift and go to state 11

state 8

    (10) parameter -> ID . AS type

    AS              shift and go to state 12


state 9

    (4) function -> FUNK ID LPAREN param_list . RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK ID LPAREN param_list . RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (8) param_list -> param_list . COMMA parameter

    RPAREN          shift and go to state 13
    COMMA           shift and go to state 14


state 10

    (5) function -> FUNK ID LPAREN RPAREN . LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (7) function -> FUNK ID LPAREN RPAREN . LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON

    LESS_THAN       shift and go to state 15


state 11

    (9) param_list -> parameter .

    RPAREN          reduce using rule 9 (param_list -> parameter .)
    COMMA           reduce using rule 9 (param_list -> parameter .)


state 12

    (10) parameter -> ID AS . type
    (11) type -> . INT
    (12) type -> . STR
    (13) type -> . MSTR
    (14) type -> . BOOL
    (15) type -> . VECTOR
    (16) type -> . NULL

    INT             shift and go to state 17
    STR             shift and go to state 18
    MSTR            shift and go to state 19
    BOOL            shift and go to state 20
    VECTOR          shift and go to state 21
    NULL            shift and go to state 22

    type                           shift and go to state 16

state 13

    (4) function -> FUNK ID LPAREN param_list RPAREN . LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK ID LPAREN param_list RPAREN . LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON

    LESS_THAN       shift and go to state 23


state 14

    (8) param_list -> param_list COMMA . parameter
    (10) parameter -> . ID AS type

    ID              shift and go to state 8

    parameter                      shift and go to state 24

state 15

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN . type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (7) function -> FUNK ID LPAREN RPAREN LESS_THAN . type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (11) type -> . INT
    (12) type -> . STR
    (13) type -> . MSTR
    (14) type -> . BOOL
    (15) type -> . VECTOR
    (16) type -> . NULL

    INT             shift and go to state 17
    STR             shift and go to state 18
    MSTR            shift and go to state 19
    BOOL            shift and go to state 20
    VECTOR          shift and go to state 21
    NULL            shift and go to state 22

    type                           shift and go to state 25

state 16

    (10) parameter -> ID AS type .

    RPAREN          reduce using rule 10 (parameter -> ID AS type .)
    COMMA           reduce using rule 10 (parameter -> ID AS type .)


state 17

    (11) type -> INT .

    RPAREN          reduce using rule 11 (type -> INT .)
    COMMA           reduce using rule 11 (type -> INT .)
    GREATER_THAN    reduce using rule 11 (type -> INT .)
    SEMI_COLON      reduce using rule 11 (type -> INT .)
    EQ              reduce using rule 11 (type -> INT .)


state 18

    (12) type -> STR .

    RPAREN          reduce using rule 12 (type -> STR .)
    COMMA           reduce using rule 12 (type -> STR .)
    GREATER_THAN    reduce using rule 12 (type -> STR .)
    SEMI_COLON      reduce using rule 12 (type -> STR .)
    EQ              reduce using rule 12 (type -> STR .)


state 19

    (13) type -> MSTR .

    RPAREN          reduce using rule 13 (type -> MSTR .)
    COMMA           reduce using rule 13 (type -> MSTR .)
    GREATER_THAN    reduce using rule 13 (type -> MSTR .)
    SEMI_COLON      reduce using rule 13 (type -> MSTR .)
    EQ              reduce using rule 13 (type -> MSTR .)


state 20

    (14) type -> BOOL .

    RPAREN          reduce using rule 14 (type -> BOOL .)
    COMMA           reduce using rule 14 (type -> BOOL .)
    GREATER_THAN    reduce using rule 14 (type -> BOOL .)
    SEMI_COLON      reduce using rule 14 (type -> BOOL .)
    EQ              reduce using rule 14 (type -> BOOL .)


state 21

    (15) type -> VECTOR .

    RPAREN          reduce using rule 15 (type -> VECTOR .)
    COMMA           reduce using rule 15 (type -> VECTOR .)
    GREATER_THAN    reduce using rule 15 (type -> VECTOR .)
    SEMI_COLON      reduce using rule 15 (type -> VECTOR .)
    EQ              reduce using rule 15 (type -> VECTOR .)


state 22

    (16) type -> NULL .

    RPAREN          reduce using rule 16 (type -> NULL .)
    COMMA           reduce using rule 16 (type -> NULL .)
    GREATER_THAN    reduce using rule 16 (type -> NULL .)
    SEMI_COLON      reduce using rule 16 (type -> NULL .)
    EQ              reduce using rule 16 (type -> NULL .)


state 23

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN . type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN . type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (11) type -> . INT
    (12) type -> . STR
    (13) type -> . MSTR
    (14) type -> . BOOL
    (15) type -> . VECTOR
    (16) type -> . NULL

    INT             shift and go to state 17
    STR             shift and go to state 18
    MSTR            shift and go to state 19
    BOOL            shift and go to state 20
    VECTOR          shift and go to state 21
    NULL            shift and go to state 22

    type                           shift and go to state 26

state 24

    (8) param_list -> param_list COMMA parameter .

    RPAREN          reduce using rule 8 (param_list -> param_list COMMA parameter .)
    COMMA           reduce using rule 8 (param_list -> param_list COMMA parameter .)


state 25

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type . GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (7) function -> FUNK ID LPAREN RPAREN LESS_THAN type . GREATER_THAN ARROW RETURN expression SEMI_COLON

    GREATER_THAN    shift and go to state 27


state 26

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type . GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type . GREATER_THAN ARROW RETURN expression SEMI_COLON

    GREATER_THAN    shift and go to state 28


state 27

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN . LCURLYEBR stmt_list RCURLYEBR
    (7) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN . ARROW RETURN expression SEMI_COLON

    LCURLYEBR       shift and go to state 29
    ARROW           shift and go to state 30


state 28

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN . LCURLYEBR stmt_list RCURLYEBR
    (6) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN . ARROW RETURN expression SEMI_COLON

    LCURLYEBR       shift and go to state 31
    ARROW           shift and go to state 32


state 29

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR . stmt_list RCURLYEBR
    (17) stmt_list -> . stmt_list statement
    (18) stmt_list -> . statement
    (19) stmt_list -> . empty
    (20) statement -> . var_declaration
    (21) statement -> . assignment
    (22) statement -> . function_call_stmt
    (23) statement -> . return_stmt
    (24) statement -> . if_stmt
    (25) statement -> . for_stmt
    (26) statement -> . while_stmt
    (27) statement -> . do_while_stmt
    (28) statement -> . block_stmt
    (29) statement -> . function
    (78) empty -> .
    (30) var_declaration -> . ID DBL_COLON type SEMI_COLON
    (31) var_declaration -> . ID DBL_COLON type EQ expression SEMI_COLON
    (32) assignment -> . ID EQ expression SEMI_COLON
    (33) assignment -> . array_access EQ expression SEMI_COLON
    (35) function_call_stmt -> . function_call SEMI_COLON
    (43) return_stmt -> . RETURN expression SEMI_COLON
    (44) return_stmt -> . RETURN SEMI_COLON
    (45) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
    (46) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement ELSE statement
    (47) for_stmt -> . FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
    (48) while_stmt -> . WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
    (49) do_while_stmt -> . DO statement WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR
    (50) block_stmt -> . BEGIN stmt_list END
    (4) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (34) array_access -> . ID LSQUAREBR expression RSQUAREBR
    (36) function_call -> . ID LPAREN arg_list RPAREN
    (37) function_call -> . ID LPAREN RPAREN
    (38) function_call -> . PRINT LPAREN arg_list RPAREN
    (39) function_call -> . PRINT LPAREN RPAREN
    (40) function_call -> . LEN LPAREN expression RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for FUNK resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LEN resolved as shift
    RCURLYEBR       reduce using rule 78 (empty -> .)
    ID              shift and go to state 33
    RETURN          shift and go to state 49
    IF              shift and go to state 50
    FOR             shift and go to state 51
    WHILE           shift and go to state 53
    DO              shift and go to state 54
    BEGIN           shift and go to state 52
    FUNK            shift and go to state 4
    PRINT           shift and go to state 55
    LEN             shift and go to state 56

  ! ID              [ reduce using rule 78 (empty -> .) ]
  ! RETURN          [ reduce using rule 78 (empty -> .) ]
  ! IF              [ reduce using rule 78 (empty -> .) ]
  ! FOR             [ reduce using rule 78 (empty -> .) ]
  ! WHILE           [ reduce using rule 78 (empty -> .) ]
  ! DO              [ reduce using rule 78 (empty -> .) ]
  ! BEGIN           [ reduce using rule 78 (empty -> .) ]
  ! FUNK            [ reduce using rule 78 (empty -> .) ]
  ! PRINT           [ reduce using rule 78 (empty -> .) ]
  ! LEN             [ reduce using rule 78 (empty -> .) ]

    stmt_list                      shift and go to state 34
    statement                      shift and go to state 35
    empty                          shift and go to state 36
    var_declaration                shift and go to state 37
    assignment                     shift and go to state 38
    function_call_stmt             shift and go to state 39
    return_stmt                    shift and go to state 40
    if_stmt                        shift and go to state 41
    for_stmt                       shift and go to state 42
    while_stmt                     shift and go to state 43
    do_while_stmt                  shift and go to state 44
    block_stmt                     shift and go to state 45
    function                       shift and go to state 46
    array_access                   shift and go to state 47
    function_call                  shift and go to state 48

state 30

    (7) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW . RETURN expression SEMI_COLON

    RETURN          shift and go to state 57


state 31

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR . stmt_list RCURLYEBR
    (17) stmt_list -> . stmt_list statement
    (18) stmt_list -> . statement
    (19) stmt_list -> . empty
    (20) statement -> . var_declaration
    (21) statement -> . assignment
    (22) statement -> . function_call_stmt
    (23) statement -> . return_stmt
    (24) statement -> . if_stmt
    (25) statement -> . for_stmt
    (26) statement -> . while_stmt
    (27) statement -> . do_while_stmt
    (28) statement -> . block_stmt
    (29) statement -> . function
    (78) empty -> .
    (30) var_declaration -> . ID DBL_COLON type SEMI_COLON
    (31) var_declaration -> . ID DBL_COLON type EQ expression SEMI_COLON
    (32) assignment -> . ID EQ expression SEMI_COLON
    (33) assignment -> . array_access EQ expression SEMI_COLON
    (35) function_call_stmt -> . function_call SEMI_COLON
    (43) return_stmt -> . RETURN expression SEMI_COLON
    (44) return_stmt -> . RETURN SEMI_COLON
    (45) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
    (46) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement ELSE statement
    (47) for_stmt -> . FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
    (48) while_stmt -> . WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
    (49) do_while_stmt -> . DO statement WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR
    (50) block_stmt -> . BEGIN stmt_list END
    (4) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (34) array_access -> . ID LSQUAREBR expression RSQUAREBR
    (36) function_call -> . ID LPAREN arg_list RPAREN
    (37) function_call -> . ID LPAREN RPAREN
    (38) function_call -> . PRINT LPAREN arg_list RPAREN
    (39) function_call -> . PRINT LPAREN RPAREN
    (40) function_call -> . LEN LPAREN expression RPAREN

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for FUNK resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LEN resolved as shift
    RCURLYEBR       reduce using rule 78 (empty -> .)
    ID              shift and go to state 33
    RETURN          shift and go to state 49
    IF              shift and go to state 50
    FOR             shift and go to state 51
    WHILE           shift and go to state 53
    DO              shift and go to state 54
    BEGIN           shift and go to state 52
    FUNK            shift and go to state 4
    PRINT           shift and go to state 55
    LEN             shift and go to state 56

  ! ID              [ reduce using rule 78 (empty -> .) ]
  ! RETURN          [ reduce using rule 78 (empty -> .) ]
  ! IF              [ reduce using rule 78 (empty -> .) ]
  ! FOR             [ reduce using rule 78 (empty -> .) ]
  ! WHILE           [ reduce using rule 78 (empty -> .) ]
  ! DO              [ reduce using rule 78 (empty -> .) ]
  ! BEGIN           [ reduce using rule 78 (empty -> .) ]
  ! FUNK            [ reduce using rule 78 (empty -> .) ]
  ! PRINT           [ reduce using rule 78 (empty -> .) ]
  ! LEN             [ reduce using rule 78 (empty -> .) ]

    stmt_list                      shift and go to state 58
    statement                      shift and go to state 35
    empty                          shift and go to state 36
    var_declaration                shift and go to state 37
    assignment                     shift and go to state 38
    function_call_stmt             shift and go to state 39
    return_stmt                    shift and go to state 40
    if_stmt                        shift and go to state 41
    for_stmt                       shift and go to state 42
    while_stmt                     shift and go to state 43
    do_while_stmt                  shift and go to state 44
    block_stmt                     shift and go to state 45
    function                       shift and go to state 46
    array_access                   shift and go to state 47
    function_call                  shift and go to state 48

state 32

    (6) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW . RETURN expression SEMI_COLON

    RETURN          shift and go to state 59


state 33

    (30) var_declaration -> ID . DBL_COLON type SEMI_COLON
    (31) var_declaration -> ID . DBL_COLON type EQ expression SEMI_COLON
    (32) assignment -> ID . EQ expression SEMI_COLON
    (34) array_access -> ID . LSQUAREBR expression RSQUAREBR
    (36) function_call -> ID . LPAREN arg_list RPAREN
    (37) function_call -> ID . LPAREN RPAREN

    DBL_COLON       shift and go to state 60
    EQ              shift and go to state 61
    LSQUAREBR       shift and go to state 62
    LPAREN          shift and go to state 63


state 34

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list . RCURLYEBR
    (17) stmt_list -> stmt_list . statement
    (20) statement -> . var_declaration
    (21) statement -> . assignment
    (22) statement -> . function_call_stmt
    (23) statement -> . return_stmt
    (24) statement -> . if_stmt
    (25) statement -> . for_stmt
    (26) statement -> . while_stmt
    (27) statement -> . do_while_stmt
    (28) statement -> . block_stmt
    (29) statement -> . function
    (30) var_declaration -> . ID DBL_COLON type SEMI_COLON
    (31) var_declaration -> . ID DBL_COLON type EQ expression SEMI_COLON
    (32) assignment -> . ID EQ expression SEMI_COLON
    (33) assignment -> . array_access EQ expression SEMI_COLON
    (35) function_call_stmt -> . function_call SEMI_COLON
    (43) return_stmt -> . RETURN expression SEMI_COLON
    (44) return_stmt -> . RETURN SEMI_COLON
    (45) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
    (46) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement ELSE statement
    (47) for_stmt -> . FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
    (48) while_stmt -> . WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR statement
    (49) do_while_stmt -> . DO statement WHILE LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR
    (50) block_stmt -> . BEGIN stmt_list END
    (4) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (7) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expression SEMI_COLON
    (34) array_access -> . ID LSQUAREBR expression RSQUAREBR
    (36) function_call -> . ID LPAREN arg_list RPAREN
    (37) function_call -> . ID LPAREN RPAREN
    (38) function_call -> . PRINT LPAREN arg_list RPAREN
    (39) function_call -> . PRINT LPAREN RPAREN
    (40) function_call -> . LEN LPAREN expression RPAREN

    RCURLYEBR       shift and go to state 64
    ID              shift and go to state 33
    RETURN          shift and go to state 49
    IF              shift and go to state 50
    FOR             shift and go to state 51
    WHILE           shift and go to state 53
    DO              shift and go to state 54
    BEGIN           shift and go to state 52
    FUNK            shift and go to state 4
    PRINT           shift and go to state 55
    LEN             shift and go to state 56

    statement                      shift and go to state 65
    var_declaration                shift and go to state 37
    assignment                     shift and go to state 38
    function_call_stmt             shift and go to state 39
    return_stmt                    shift and go to state 40
    if_stmt                        shift and go to state 41
    for_stmt                       shift and go to state 42
    while_stmt                     shift and go to state 43
    do_while_stmt                  shift and go to state 44
    block_stmt                     shift and go to state 45
    function                       shift and go to state 46
    array_access                   shift and go to state 47
    function_call                  shift and go to state 48

state 35

    (18) stmt_list -> statement .

    RCURLYEBR       reduce using rule 18 (stmt_list -> statement .)
    ID              reduce using rule 18 (stmt_list -> statement .)
    RETURN          reduce using rule 18 (stmt_list -> statement .)
    IF              reduce using rule 18 (stmt_list -> statement .)
    FOR             reduce using rule 18 (stmt_list -> statement .)
    WHILE           reduce using rule 18 (stmt_list -> statement .)
    DO              reduce using rule 18 (stmt_list -> statement .)
    BEGIN           reduce using rule 18 (stmt_list -> statement .)
    FUNK            reduce using rule 18 (stmt_list -> statement .)
    PRINT           reduce using rule 18 (stmt_list -> statement .)
    LEN             reduce using rule 18 (stmt_list -> statement .)
    END             reduce using rule 18 (stmt_list -> statement .)


state 36

    (19) stmt_list -> empty .

    RCURLYEBR       reduce using rule 19 (stmt_list -> empty .)
    ID              reduce using rule 19 (stmt_list -> empty .)
    RETURN          reduce using rule 19 (stmt_list -> empty .)
    IF              reduce using rule 19 (stmt_list -> empty .)
    FOR             reduce using rule 19 (stmt_list -> empty .)
    WHILE           reduce using rule 19 (stmt_list -> empty .)
    DO              reduce using rule 19 (stmt_list -> empty .)
    BEGIN           reduce using rule 19 (stmt_list -> empty .)
    FUNK            reduce using rule 19 (stmt_list -> empty .)
    PRINT           reduce using rule 19 (stmt_list -> empty .)
    LEN             reduce using rule 19 (stmt_list -> empty .)
    END             reduce using rule 19 (stmt_list -> empty .)


state 37

    (20) statement -> var_declaration .
